some style fixes to the posts

--- a/Pages/Admin.cshtml
+++ b/Pages/Admin.cshtml
@@ -9,6 +9,7 @@
  
 
 <link rel="stylesheet" href="~/css/post-card.css" />
+<link rel="stylesheet" href="~/css/mobile-responsive.css" />
 
 <div class="admin-container">
     <div class="admin-header">
