--- a/Pages/Post.cshtml
+++ b/Pages/Post.cshtml
@@ -16,6 +16,7 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/post-card.css" />
     <link rel="stylesheet" href="~/css/comments.css" />
+    <link rel="stylesheet" href="~/css/mobile-responsive.css" />
 }
 
 <!-- Debug Information -->
