--- a/Pages/AdminNews.cshtml
+++ b/Pages/AdminNews.cshtml
@@ -13,6 +13,7 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/admin-news.css" />
     <link rel="stylesheet" href="~/css/post-card.css" />
+    <link rel="stylesheet" href="~/css/mobile-responsive.css" />
 }
 
 <!-- Page Header -->
