--- a/Pages/TestPost.cshtml
+++ b/Pages/TestPost.cshtml
@@ -11,6 +11,7 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/post-card.css" />
     <link rel="stylesheet" href="~/css/comments.css" />
+    <link rel="stylesheet" href="~/css/mobile-responsive.css" />
 }
 
 <div class="container mt-4">
