--- a/Views/Shared/Components/PostCard/Default.cshtml
+++ b/Views/Shared/Components/PostCard/Default.cshtml
@@ -12,7 +12,7 @@
     {
         <div class="post-header">
             <div class="post-user-info">
-                <a href="/UserProfile/@post.UserID" class="user-link">
+                <a href="~/UserProfile/@post.UserID" class="user-link">
                     <div class="post-avatar">
                         @{
                             // Handle both relative and absolute paths for profile picture
