--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -57,7 +57,7 @@
             <i class="fas fa-newspaper"></i>
             <h3>No posts available</h3>
             <p>Be the first to share some news!</p>
-            <a href="/Post" class="btn btn-primary">
+            <a href="~/Post" class="btn btn-primary">
                 <i class="fas fa-plus"></i> Create Post
             </a>
         </div>
