--- a/Views/Shared/_EnhancedPostsList.cshtml
+++ b/Views/Shared/_EnhancedPostsList.cshtml
@@ -80,7 +80,7 @@
                     <p>Be the first to share some news!</p>
                     @if (Model.CurrentUser != null)
                     {
-                        <a href="/Post" class="btn btn-primary">
+                        <a href="~/Post" class="btn btn-primary">
                             <i class="fas fa-plus"></i> Create Post
                         </a>
                     }
