--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/comments.css" />
+    <link rel="stylesheet" href="~/css/trending-topics.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     @RenderSection("Styles", required: false)
     
@@ -48,6 +49,8 @@
     <script src="~/js/follow-manager.js"></script>
     <!-- Comments System -->
     <script src="~/js/comments.js"></script>
+    <!-- Trending Topics -->
+    <script src="~/js/trending-topics.js"></script>
     
     <script>
         // Mobile menu toggle
