--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/comments.css" />
     <link rel="stylesheet" href="~/css/trending-topics.css" />
+    <link rel="stylesheet" href="~/css/notification-popup.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     @RenderSection("Styles", required: false)
     
@@ -51,6 +52,10 @@
     <script src="~/js/comments.js?v=@DateTime.Now.Ticks"></script>
     <!-- Trending Topics -->
     <script src="~/js/trending-topics.js?v=@DateTime.Now.Ticks"></script>
+    <!-- Notification System -->
+    <script src="~/js/notifications.js?v=@DateTime.Now.Ticks"></script>
+    <!-- Repost System -->
+    <script src="~/js/repost.js?v=@DateTime.Now.Ticks"></script>
     
     <script>
         // Mobile menu toggle
